<resources>
    <string name="app_name">SaveMoney</string>
    <string name="user">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="retypePass">Nhập lại mật khẩu</string>
    <string name="fullName">Họ tên</string>
    <string name="login">Đăng nhập</string>
    <string name="spend">Loại chi tiêu</string>
    <string name="type">Hạn mục</string>
    <string name="description">Diễn giải</string>
    <string name="day">Ngày</string>
    <string name="time">Giờ</string>
    <string name="account">Ví</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string-array name="spinner_kind">
        <item>Tiền mặt</item>
        <item>Ví điện tử</item>
    </string-array>
    <string-array name="spinner_data_month">

        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>
</resources>