<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTransactionActivity"
    android:background="#D9D9D9">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Chi tiết"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEdit">

        <TextView
            android:id="@+id/txtMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="Số tiền"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMon"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/ic_baseline_attach_money_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#6200EE" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputSpendEdit"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/spend"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <AutoCompleteTextView
            android:id="@+id/autoSpendEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputTypeEdit"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/type"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputSpendEdit"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <AutoCompleteTextView
            android:id="@+id/autoTypeEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputDescriptionEdit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputTypeEdit"
        app:startIconDrawable="@drawable/ic_baseline_description_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputDayEdit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/day"
        android:inputType="time"
        android:minHeight="60dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputDescriptionEdit"
        app:startIconDrawable="@drawable/ic_baseline_today_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDayEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputTimeEdit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="textPersonName"
        android:minHeight="60dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputDayEdit"
        app:startIconDrawable="@drawable/ic_baseline_more_time_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTimeEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputAccountEdit"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/account"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputTimeEdit"
        app:startIconDrawable="@drawable/ic_baseline_account_balance_24">

        <AutoCompleteTextView
            android:id="@+id/autoAccountEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteEdit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:background="#C00000"
        android:text="Xóa"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputAccountEdit"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveEdit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:text="Lưu"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeleteEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>